--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="gray_ea">#eaeaea</color>
     <color name="gray_d7">#d7d7d7</color>
     <color name="gray_f2">#f2f2f2</color>
-    <color name="gray_61">#616161</color>
+    <color name="gray_bg">#FFF3F4F6</color>
     <color name="image_bg">#FFF1EFEF</color>
     <color name="gray_d4">#d4d4d4</color>
     <color name="gray_dd">#DDDDDD</color>
