--- a/app/src/main/res/layout/add_bank_popu.xml
+++ b/app/src/main/res/layout/add_bank_popu.xml
@@ -4,40 +4,49 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/bg_color"
     >
-<com.github.fastshape.MyLinearLayout
+<RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
-    app:solidColor="@color/white"
-    app:radius="5dp"
+    android:layout_height="45dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     >
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="开户行如何查询?"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/gray_33"
-        android:textSize="14sp"
+        android:layout_height="match_parent"
+        android:text="取消"
+        android:layout_centerVertical="true"
+        android:gravity="center|left"
+        android:ems="4"
         />
-    <com.library.base.view.richedit.TheEditor
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        >
-
-    </com.library.base.view.richedit.TheEditor>
+        android:text="选择银行"
+        android:layout_centerInParent="true"
+        android:textColor="@color/red"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="确定"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:gravity="center|right"
+        android:ems="4"
+        />
+</RelativeLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="2px"
         android:background="@color/divider_color"
         />
-    <TextView
+    <com.library.base.view.MyRecyclerView
+        android:id="@+id/rv_add_bank_select"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="我知道了"
-        android:gravity="center"
-        />
-</com.github.fastshape.MyLinearLayout>
+        android:layout_height="wrap_content"
+        >
+
+    </com.library.base.view.MyRecyclerView>
 </LinearLayout>
