--- a/app/src/main/res/layout/add_zhifubao_act.xml
+++ b/app/src/main/res/layout/add_zhifubao_act.xml
@@ -4,7 +4,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#FFF3F4F6"
+              android:background="@color/gray_bg"
     >
 <include layout="@layout/app_title"/>
     <com.library.base.ProgressLayout
@@ -15,78 +15,76 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="#FFF3F4F6"
+            android:background="@color/gray_bg"
             >
+
             <!--your view-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:background="@color/white"
-            >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="旧密码:"
-                android:textColor="@color/gray_66"
-                android:textSize="14sp"
-                android:ems="5"
-                />
-            <com.zhizhong.yujian.view.MyEditText
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:gravity="center_vertical"
-                android:textSize="13sp"
-                app:solidColor="@color/white"
-                android:inputType="textWebPassword"
-                android:imeOptions="actionNext"
-                android:hint="请输入旧密码"
-                />
-        </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
                 android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:background="@color/white"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="支付宝账号"
+                    android:ems="5"
+                    />
+                <com.zhizhong.yujian.view.MyEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="13sp"
+                    app:solidColor="@color/white"
+                    android:inputType="text"
+                    android:imeOptions="actionNext"
+                    android:hint="请输入支付宝账号"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
                 android:background="@color/white"
                 android:layout_marginTop="2px"
                 >
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="新密码:"
-                    android:textColor="@color/gray_66"
-                    android:textSize="14sp"
+                    android:text="姓名"
                     android:ems="5"
                     />
                 <com.zhizhong.yujian.view.MyEditText
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="match_parent"
                     android:gravity="center_vertical"
                     android:textSize="13sp"
                     app:solidColor="@color/white"
-                    android:inputType="textWebPassword"
+                    android:inputType="text"
                     android:imeOptions="actionNext"
-                    android:hint="请输入新密码"
+                    android:hint="请输入支付宝姓名"
                     />
             </LinearLayout>
             <com.github.fastshape.MyTextView
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:text="确定"
+                android:text="确认添加"
                 android:gravity="center"
-                android:layout_margin="25dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 app:solidColor="@color/red_button"
                 app:pressColor="@color/red_press"
                 app:radius="4dp"
                 />
+
         </LinearLayout>
     </com.library.base.ProgressLayout>
 </LinearLayout>
