--- a/app/src/main/res/layout/home_frag.xml
+++ b/app/src/main/res/layout/home_frag.xml
@@ -6,5 +6,247 @@
               android:layout_height="match_parent"
               android:background="@color/bg_color"
     >
+    <com.library.base.ProgressLayout
+        android:id="@id/pl_load"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <android.support.v4.widget.NestedScrollView
+            android:id="@id/nsv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/bg_color"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+                <com.github.fastshape.MyRelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    app:clipRadius="6dp"
+                    >
+                    <ImageView
+                        android:id="@+id/iv_home_live"
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
+                        android:src="@drawable/qq"
+                        />
+                    <com.github.fastshape.MyTextView
+                        android:id="@+id/tv_home_live_flag"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="直播中"
+                        app:solidColor="@color/home_live"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/white"
+                        android:paddingTop="3dp"
+                        android:paddingBottom="3dp"
+                        android:paddingLeft="7dp"
+                        android:paddingRight="7dp"
+                        />
+                    <com.github.fastshape.MyTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="8人观看"
+                        app:solidColor="#FF9A9A9A"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/white"
+                        android:paddingTop="3dp"
+                        android:paddingBottom="3dp"
+                        android:paddingLeft="7dp"
+                        android:paddingRight="7dp"
+                        android:layout_toRightOf="@+id/tv_home_live_flag"
+                        app:topRightRadius="10dp"
+                        app:bottomRightRadius="10dp"
+                        />
+                    <com.github.fastshape.MyTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:text="石头你好"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="10dp"
+                        app:solidColor="@color/white"
+                        app:bottomRightRadius="6dp"
+                        app:bottomLeftRadius="6dp"
+                        android:layout_below="@+id/iv_home_live"
+                        />
+                </com.github.fastshape.MyRelativeLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    >
+                    <com.github.fastshape.MyRelativeLayout
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        app:clipRadius="6dp"
+                        android:layout_marginRight="10dp"
+                        >
+                        <ImageView
+                            android:id="@+id/iv_home_live2"
+                            android:layout_width="match_parent"
+                            android:layout_height="90dp"
+                            android:src="@drawable/qq"
+                            />
+                        <com.github.fastshape.MyTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="直播中"
+                            android:layout_margin="10dp"
+                            android:textColor="@color/white"
+                            app:solidColor="@color/home_live"
+                            android:paddingLeft="6dp"
+                            android:paddingRight="6dp"
+                            android:paddingTop="2dp"
+                            android:paddingBottom="2dp"
+                            android:textSize="11sp"
+                            app:radius="11dp"
+                            />
+                        <com.github.fastshape.MyTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                            android:text="石头你好"
+                            android:gravity="center_vertical"
+                            android:paddingLeft="10dp"
+                            app:solidColor="@color/white"
+                            android:layout_below="@+id/iv_home_live2"
+                            />
+                    </com.github.fastshape.MyRelativeLayout>
+                    <com.github.fastshape.MyRelativeLayout
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        app:clipRadius="6dp"
+                        >
+                        <ImageView
+                            android:id="@+id/iv_home_live3"
+                            android:layout_width="match_parent"
+                            android:layout_height="90dp"
+                            android:src="@drawable/qq"
+                            />
+                        <com.github.fastshape.MyTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="直播中"
+                            android:layout_margin="10dp"
+                            android:textColor="@color/white"
+                            app:solidColor="@color/home_live"
+                            android:paddingLeft="6dp"
+                            android:paddingRight="6dp"
+                            android:paddingTop="2dp"
+                            android:paddingBottom="2dp"
+                            app:radius="11dp"
+                            android:textSize="11sp"
+                            />
+                        <com.github.fastshape.MyTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                            android:text="石头你好"
+                            android:gravity="center_vertical"
+                            android:paddingLeft="10dp"
+                            app:solidColor="@color/white"
+                            android:layout_below="@+id/iv_home_live3"
+                            />
+                    </com.github.fastshape.MyRelativeLayout>
+                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp"
+                    android:background="#FFF3F4F6"
+                    />
+                <com.github.fastshape.MyImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/qq"
+                    app:clipRadius="5dp"
+                    android:layout_margin="10dp"
+                    android:visibility="gone"
+                    />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp"
+                    android:background="#FFF3F4F6"
+                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    >
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:text="推荐商品"
+                        android:textSize="15sp"
+                        android:textColor="@color/gray_33"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="查看更多"
+                        />
+                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2px"
+                    android:background="@color/divider_color"
+                    />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_home_tuijian_goods"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+
+                </android.support.v7.widget.RecyclerView>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp"
+                    android:background="@color/divider_color"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:text="综合资讯"
+                    android:gravity="center_vertical"
+                    android:textSize="15sp"
+                    android:textColor="@color/gray_33"
+                    android:paddingLeft="10dp"
+                    />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2px"
+                    android:background="@color/divider_color"
+                    />
+                <com.library.base.view.MyRecyclerView
+                    android:id="@+id/rv_home_zixun"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+
+                </com.library.base.view.MyRecyclerView>
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
+        <com.github.fastshape.MyTextView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="顶部"
+            app:radius="25dp"
+            android:gravity="center"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="80dp"
+            android:layout_marginRight="10dp"
+            />
+    </com.library.base.ProgressLayout>
 </LinearLayout>
