--- a/app/src/main/res/layout/setting_act.xml
+++ b/app/src/main/res/layout/setting_act.xml
@@ -125,6 +125,14 @@
                     />
             </LinearLayout>
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Copyright © 2018\n 公司版权所有"
+                android:gravity="center"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                />
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="43dp"
                 android:text="退出登录"
