--- a/app/src/main/res/layout/add_address_act.xml
+++ b/app/src/main/res/layout/add_address_act.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -157,7 +158,7 @@
                         android:paddingTop="15dp"
                         tools:text="afasfdsadf"
                         android:textSize="14sp"
-                        app:my_et_hiddenClear="true"
+                        app:hiddenClearIcon="true"
                         />
                 </LinearLayout>
 
