--- a/app/src/main/res/layout/sure_order_act.xml
+++ b/app/src/main/res/layout/sure_order_act.xml
@@ -239,7 +239,7 @@
             android:orientation="horizontal"
             android:gravity="center_vertical"
             android:layout_alignParentBottom="true"
-            app:my_ll_top_line="true"
+            app:top_line="true"
             >
             <LinearLayout
                 android:layout_width="0dp"
