--- a/app/src/main/res/layout/login_act.xml
+++ b/app/src/main/res/layout/login_act.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
@@ -113,6 +113,7 @@
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
                     android:textColor="@color/gray_99"
+                    android:visibility="gone"
                     />
                 <TextView
                     android:id="@+id/tv_login_forget"
@@ -180,4 +181,4 @@
             </LinearLayout>
         </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
-</RelativeLayout>
+</LinearLayout>
